--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,7 +12,7 @@
        - uses: jasineri/gitartwork@v1
          with:
             # Use this username's contribution graph  
-            user_name: anilkhadelwal7845
+            user_name: jasineri
             # Text on contribution graph 
-            text: AnilKhandelwal
-       - uses: anilkhandelwal7845/simple-push-action@v1
+            text: JASINERI
+       - uses: jasineri/simple-push-action@v1
