--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,7 +12,7 @@
        - uses: jasineri/gitartwork@v1
          with:
             # Use this username's contribution graph  
-            user_name: pal-sandeep
+            user_name: anilkhandelwal7845
             # Text on contribution graph 
-            text: SANDEEP PAL
+            text: ANIL
        - uses: jasineri/simple-push-action@v1
